--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ setInterval(GetClock,1000);
 
       </div>
      
-      <img src="wallpaper/wallhaven-28gz5g.jpg" alt="image of moon">
+      <video src="wallpaper/ochako.gif" alt="image of moon">
 
 
         <nav>
