--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ setInterval(GetClock,1000);
 
       </div>
      
-      <video src="wallpaper/ochako.gif" alt="image of moon">
+      <video src="wallpaper/ochako.mp4" alt="image of moon">
 
 
         <nav>
