--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ setInterval(GetClock,1000);
 
       </div>
      
-      <image src="wallpaper/moon.jpg" alt="image of moon">
+      <imag src="wallpaper/moon.jpg" alt="image of moon">
 
 
         <nav>
