--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ジェイ</title>
+        <title>🫡🤓</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
