--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <div id="datebox"></div>
 
 <script type="text/javascript">
-var tday=["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
-var tmonth=["January","February","March","April","May","June","July","August","September","October","November","December"];
+var tday=["Domingo","Lunes","Martes","Miercoles","Jueves","Viernes","Sabado"];
+var tmonth=["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"];
 
 function GetClock(){
 var d=new Date();
@@ -46,7 +46,7 @@ setInterval(GetClock,1000);
 
       </div>
      
-      <img src="wallpaper/wallhaven-28gz5g.jpg" alt="image of moon">
+      <img src="wallpaper/wallhaven-1p398w_1920x1080.png" alt="image of moon">
 
 
         <nav>
