--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ setInterval(GetClock,1000);
             
 
           </nav>
-          <form action="https://duckduckgo.com/" method="GET" target="_blank">
+          <form action="https://google.com/" method="GET" target="_blank">
             <input autofocus
                    name="q"
-                   type="search"
+                   type="buscar"
                    placeholder="search..."
                    tabindex="1">
           </form>
