--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ setInterval(GetClock,1000);
           <form action="https://google.com/" method="GET" target="_blank">
             <input autofocus
                    name="q"
-                   type="buscar"
-                   placeholder="search..."
+                   type="search"
+                   placeholder="buscar..."
                    tabindex="1">
           </form>
     </body>
