--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ setInterval(GetClock,1000);
               <li><a href="https://www.reddit.com/r/unixporn/">r/unixporn</a></li>
               <li><a href="https://linux.die.net/">linux-die</a></li>
               <li><a href="https://www.chess.com/">chess</a></li>
-              <li><a href="https://moewalls.com/">moewalls</a></li>
+              <li><a href="https://web.telegram.org/z/">telegram</a></li>
             </ul>
        </nav>
          <form action="https://google.com/search" method="GET" target="_blank">
