--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ setInterval(GetClock,1000);
               <li><a href="https://amazon.es/">amazon</a></li>
               <li><a href="https://drive.google.com/drive/my-drive">gdrive</a></li>
               <li><a href="https://mail.google.com/mail/u/0/">gmail</a></li>
-              <li><a href="http://reddit.com/">reddit</a></li>
+              <li><a href="https://www.virustotal.com/gui/home/upload">reddit</a></li>
             </ul>
 
             <ul>
