--- a/index.html
+++ b/index.html
@@ -54,24 +54,28 @@ setInterval(GetClock,1000);
             <ul>
               <li><a href="https://www.youtube.com/">youtube</a></li>
               <li><a href="https://web.whatsapp.com/">whatsapp</a></li>
+              <li><a href="https://mipmip.github.io/home-manager-option-search/">mipmip</a></li>
             </ul>
         
             <ul>
               <li><a href="https://mail.google.com/mail/u/0/">gmail</a></li>
               <li><a href="https://chat.openai.com/chat">chatgpt</a></li>
+              <li><a href="https://www.deepl.com/translator">deepl</a></li>
             </ul>
         
             <ul>
               <li><a href="https://www.chess.com/">chess</a></li>
               <li><a href="https://www.virustotal.com/gui/home/upload">virustotal</a></li>
+              <li><a href="https://search.nixos.org/packages">nixos</a></li>
             </ul>
 
             <ul>
               <li><a href="https://github.com/">github</a></li>
               <li><a href="https://drive.google.com/drive/my-drive">gdrive</a></li>
+              <li><a href="https://www.wallhaven.cc">wallhaven</a></li>
             </ul>
        </nav>
-         <form action="https://google.com/search" method="GET" target="_blank">
+         <form action="https://duckduckgo.com/search" method="GET" target="_blank">
            <input autofocus
                  name="q"
                  type="search"
