--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ setInterval(GetClock,1000);
               <li><a href="https://www.wallhaven.cc">wallhaven</a></li>
             </ul>
        </nav>
-         <form action="https://duckduckgo.com/search" method="GET" target="_blank">
-           <input autofocus
-                 name="q"
-                 type="search"
-                 placeholder="buscar..."
-                tabindex="1">
+         <form action="https://duckduckgo.com/" method="GET" target="_blank">
+            <input autofocus
+                   name="q"
+                   type="search"
+                   placeholder="search..."
+                   tabindex="1">
           </form>
     </body>
 </html>
